# django_todo

./: .gitignore  README.md  pyproject.toml
django_todo/: settings.py  urls.py
tasks/: views.py
tasks/static/css/: styles.css
templates/: base.html
templates/auth/: login.html  register.html
templates/partials/: _messages.html  _navbar.html
templates/tasks/: index.html  todo_confirm_delete.html  todo_detail.html  todo_form.html  todo_list.html
