[project]
name = "django-todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["django>=6.0.3"]

[dependency-groups]
dev = ["djlint>=1.36.4", "ruff>=0.15.8"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "DJ"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# djlint
# ---------------------------------------------------------------------------
[tool.djlint]
profile = "django"
indent = 4
max_line_length = 120
format_attribute_template_tags = true
close_void_tags = true
ignore = "H030,H031,T003,H023,H021,D018"
# T003 — endblock без имени (стиль, не ошибка)
# H023 — HTML entities (&copy; &laquo; etc.) — вполне валидный HTML
# H021 — inline styles (иногда необходимы)
# D018 — href="/" в error pages (нет named url для root)
